c/examples/gcc/testsuite/c-c++-common/cpp/pr93545-2.c
/* PR preprocessor/93545 */
/* { dg-do preprocess } */

__has_include (	/* { dg-error "" } */
